feat: sample dialog with some callbacks

--- a/src/DelayGUI/DelayGUI.vcxproj.filters
+++ b/src/DelayGUI/DelayGUI.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CMainDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\DelayGUI.rc2">
@@ -41,6 +44,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CMainDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
