--- a/src/DelayGUI/DelayGUI.vcxproj
+++ b/src/DelayGUI/DelayGUI.vcxproj
@@ -130,6 +130,7 @@
     <ClInclude Include="CMainDialog.h" />
     <ClInclude Include="DelayGUI.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="model.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
