--- a/src/DelayGUI/DelayGUI.vcxproj.filters
+++ b/src/DelayGUI/DelayGUI.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClInclude Include="CMainDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DelayGUI.rc">
